--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 @import 'variables';
+@import 'mixins';
 
 html,
 body {
@@ -14,7 +15,8 @@ body {
   height: 100vh;
   overflow: hidden;
   // border: 1vh solid $alt_color;
-  font-family: $font_family;
+  font-family: $primary_font;
+  @include word-wrap();
 
   .container {
     display: flex;
@@ -51,12 +53,25 @@ body {
   }
 }
 
-header, footer {
-  width: 100%;
+.header {
   max-height: 45px;
+  justify-content: space-between;
+
+  nav {
+    max-height: 45px;
+    justify-content: flex-end;
+  }
+}
+
+header {
+  justify-content: flex-start;
+  max-height: 45px;
+  max-width: 210px
 }
 
 footer {
+  width: 100%;
+  max-height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,14 +111,19 @@ button, .button {
   align-items: center;
   background-color: $text_color;
   color: $bg_color;
-  height: 42px;
-  font-size: $font_size;
+  height: $font_size * 2;
+  font-size: math.div($font_size, 1);
   line-height: $line_height;
-  padding: 0 16px;
-  font-weight: 900;
+  padding: 0 $padding;
+  font-weight: $font-weight + 200;
   border: 0;
   outline: 0;
   cursor:pointer;
+
+  &.nav-btn {
+    background-color: transparent;
+    padding: 0;
+  }
 }
 
 .social-btn {
@@ -135,6 +155,14 @@ mark {
   }
 }
 
+.primary_font {
+  font-family: $primary_font;
+}
+
+.secondary_font {
+  font-family: $secondary_font;
+}
+
 .bg_color {
   color: $bg_color;
 }
@@ -155,36 +183,27 @@ mark {
   color: $highlight_color;
 }
 
-.title  {
-  display: flex;
-  flex-direction: column;
-  font-size: $font_size * 5;
-  font-family: $secondary_font, serif;
-  margin-bottom: $line_height * 1.5;
-
-  span {
-    margin-top: $line_height * 1.5;
-  }
-
-  @include query(mobile, tablet){
-    font-size: $font_size * 2;
-    margin-bottom: math.div($line_height, 2);
-
-    span {
-      margin-top: math.div($line_height, 2);
-    }
-  }
-}
-
 .description {
-  font-family: $font_family;
+  font-family: $primary_font;
   color: $shadow_color;
   font-size: $font_size;
-  line-height: $line_height;
 }
 
 .flex {
   display: flex;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.display-none {
+  display: none;
+}
+
+.display-block {
+  display: block;
 }
 
 .row {
@@ -215,9 +234,48 @@ mark {
     h#{$i} {
       display: block;
       color: #fff;
-      font-weight: 500;
-      font-size: #{math.div(90, $i) } + 'px';
-      line-height: $line_height * ($i - 0.5);
+      font-weight: $font-weight;
+      font-size: $font_size * (6 - $i);
+      line-height: $line_height;
+      margin-bottom: $line_height;
+
+      span {
+        margin-bottom: $line_height;
+      }
+
+      span:last-child {
+        margin-bottom: 0;
+      }
+
+      &.logo_text {
+        margin-bottom: 0;
+
+        span {
+          margin-bottom: 0;
+        }
+      }
+
+      @include query(mobile, tablet) {
+        font-size: math.div($font_size * (6 - $i), 2);
+        line-height: math.div($line_height, 1.2);
+        margin-bottom: math.div($line_height, 1.2);
+
+        span {
+          margin-bottom: math.div($line_height, 1.2);
+        }
+
+        span:last-child {
+          margin-bottom: 0;
+        }
+
+        &.logo_text {
+          margin-bottom: 0;
+
+          span {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
   }
 
@@ -232,9 +290,16 @@ mark {
 
 @each $key, $value in $bp{
   @media (max-width: $value){
-    .display-#{$key}-none {
+    .display-none-#{$key} {
+      @debug "divider offset: #{$key}-#{$value}";
       display: none;
       visibility: hidden;
+    }
+
+    .display-block-#{$key} {
+      @debug "divider offset: #{$key}-#{$value}";
+      display: block;
+      visibility: visible;
     }
   }
 }
