--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,139 +1,37 @@
 @use "sass:math";
-@import 'variables';
 @import 'mixins';
+@import 'variables';
+@import "~bootstrap/scss/bootstrap";
 
-html,
-body {
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-  color: $shadow_color;
-  font-size: $font_size;
-  line-height: $line_height;
-  background-color: $bg_color;
-  height: 100vh;
-  overflow: hidden;
-  // border: 1vh solid $alt_color;
-  font-family: $primary_font;
-  @include word-wrap();
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    max-width: 1140px;
-    height: 100vh;
-    gap: $gap math.div($gap, 2);
-    padding: $padding;
-  }
-}
-
-
-.block {
-  display: flex;
-  flex-direction: row;
-  gap: $gap math.div($gap, 2);
-  // padding: math.div($padding, 2);
-  width: 100%;
-  @include query(mobile){
-    flex-direction: column;
-  }
-}
-
-.box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  flex-basis: 100%;
-
-  &.widget {
-    border : 1px solid $alt_color;
-  }
-}
-
-.header {
-  max-height: 45px;
-  justify-content: space-between;
-
-  nav {
-    max-height: 45px;
-    justify-content: flex-end;
-  }
-}
-
-header {
-  justify-content: flex-start;
-  max-height: 45px;
-  max-width: 210px
-}
-
-footer {
-  width: 100%;
-  max-height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container {
+  height: 100vh
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  max-height: calc(100vh - 135px);
-  width: 100%;
+  height: calc(100vh - 120px);
   overflow: hidden;
   overflow-y: scroll;
   flex: 1;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+footer {
+  // flex: 1;
+  height: 45px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.secondary_font {
+  font-family: $secondary_font;
 }
 
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-
-button, .button {
-  display: flex;
-  align-content: center;
-  align-items: center;
-  background-color: $text_color;
-  color: $bg_color;
-  height: $font_size * 2;
-  font-size: math.div($font_size, 1);
-  line-height: $line_height;
-  padding: 0 $padding;
-  font-weight: $font-weight + 200;
-  border: 0;
-  outline: 0;
-  cursor:pointer;
-
-  &.nav-btn {
-    background-color: transparent;
-    padding: 0;
-  }
-}
-
-.social-btn {
-  padding: 0 10px;
-  margin-right: 10px;
+.smaller {
+  font-size: 0.675em;
 }
 
 mark {
-  background-color: $alt_color;
-  color: $bg_color;
+  // background-color: $primary;
+  // color: $body-bg;
+  background-color: transparent;
+  color: #fff;
 
   &::before {
     content: " [highlight start] ";
@@ -155,155 +53,20 @@ mark {
   }
 }
 
-.primary_font {
-  font-family: $primary_font;
-}
+.offcanvas-top {
+  height: auto;
+  height: 90px;
+  // margin-top: -1rem !important;
+  transition-timing-function: ease-in-out;
+  transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+  transition: visibility all .5s ease-in-out;
 
-.secondary_font {
-  font-family: $secondary_font;
-}
-
-.bg_color {
-  color: $bg_color;
-}
-
-.shadow_color {
-  color: $shadow_color;
-}
-
-.text_color {
-  color: $text_color;
-}
-
-.alt_color {
-  color: $alt_color;
-}
-
-.highlight_color {
-  color: $highlight_color;
-}
-
-.description {
-  font-family: $primary_font;
-  color: $shadow_color;
-  font-size: $font_size;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-center {
-  justify-content: center;
-  align-items: center;
-}
-
-.display-none {
-  display: none;
-}
-
-.display-block {
-  display: block;
-}
-
-.row {
-  flex-direction: row;
-}
-
-.column {
-  flex-direction: column;
-}
-
-.flex-start {
-  align-content: flex-start;
-  align-items: flex-start;
-}
-
-.flex-end {
-  align-content: flex-end;
-  align-items: flex-end;
-
-  @include query(mobile){
-    align-content: flex-start;
-    align-items: flex-start;
-  }
-}
-
-@for $i from 1 through 10 {
-  @if $i < 6 {
-    h#{$i} {
-      display: block;
-      color: #fff;
-      font-weight: $font-weight;
-      font-size: $font_size * (6 - $i);
-      line-height: $line_height;
-      margin-bottom: $line_height;
-
-      span {
-        margin-bottom: $line_height;
-      }
-
-      span:last-child {
-        margin-bottom: 0;
-      }
-
-      &.logo_text {
-        margin-bottom: 0;
-
-        span {
-          margin-bottom: 0;
-        }
-
-        &.connect {
-          font-size: math.div($font_size * (6 - $i), 2);
-        }
-      }
-
-      @include query(mobile, tablet) {
-        font-size: math.div($font_size * (6 - $i), 2);
-        line-height: math.div($line_height, 1.2);
-        margin-bottom: math.div($line_height, 1.2);
-
-        span {
-          margin-bottom: math.div($line_height, 1.2);
-        }
-
-        span:last-child {
-          margin-bottom: 0;
-        }
-
-        &.logo_text {
-          margin-bottom: 0;
-
-          span {
-            margin-bottom: 0;
-          }
-        }
-      }
-    }
+  @include query('mobile') {
+    height: 100vh;
   }
 
-  .flex-basis-#{$i * 10} {
-    flex-basis: #{$i * 10} + '%';
-
-    @include query(mobile){
-      flex-basis: 100%;
-    }
-  }
-}
-
-@each $key, $value in $bp{
-  @media (max-width: $value){
-    .display-none-#{$key} {
-      @debug "divider offset: #{$key}-#{$value}";
-      display: none;
-      visibility: hidden;
-    }
-
-    .display-block-#{$key} {
-      @debug "divider offset: #{$key}-#{$value}";
-      display: block;
-      visibility: visible;
-    }
+  .btn-close {
+    top: 3.25rem;
+    right: 3.25rem;
   }
 }
