--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,31 +1,27 @@
+@use "sass:math";
 @import 'variables';
 
-#header_main {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-grow: 1;
+.menu-btn {
+  width: 60px;
+  gap: math.div($gap, 5);
+  // margin-right: 50%;
+  // transition: transform 330ms ease-out;
+  // transform: translateX(25%);
 
-  h1 {
-    display: flex;
-    flex-direction: column;
-    color: $text_color;
-    font-size: $font_size * 1.1;
-    font-weight: 500;
-    line-height: 1;
-    max-width: 220px;
-    text-align: left;
-    margin-left: 10px;
-    small {
-      color: $highlight_color;
-      font-size: $font_size * 0.59;
-      font-style: italic;
-    }
-  }
 }
 
-.profile-pic {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
+.line {
+  border-radius: 5px;
+  height: 3px;
+}
+
+.start {
+  transform-origin: right;
+  transition: transform 330ms cubic-bezier(.54,-.81,.57,.57);
+}
+
+.end {
+  align-self: flex-end;
+  transform-origin: left;
+  transition: transform 330ms cubic-bezier(.54,-.81,.57,.57);
 }
