--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,6 @@
 $gap : 4vh;
 $padding : 4vh;
-$body-bg: #030303;
-$text_color: #fff;
+$dark: #030303;
 $primary : #48CAE4;
 $secondary: #999;
 $body-color: $secondary;
@@ -9,28 +8,28 @@ $success: #33d06c;
 $info:    #0d6efd;
 $warning: #F9DC5C;
 $danger: #ED254E;
-$font_size: 18px;
-$font-weight: 500;
-$line_height: $font_size * 2;
 $secondary_font: 'Playfair Display', serif;
 $font-size-base: 1rem;
 $enable-negative-margins: true;
 $font-family-base: 'IBM Plex Mono', monospace, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-$bp : (
-  desktop : 1440px,
-  tablet : 768px,
-  mobile : 480px,
-);
+// $grid-breakpoints: (
+//   xs: 0,
+//   sm: 576px,
+//   md: 768px,
+//   lg: 992px,
+//   xl: 1200px,
+//   xxl: 1400px
+// );
 
-$theme-colors: (
-  "primary":    $primary,
-  "secondary":  $secondary,
-  "success":    $success,
-  "info":       $info,
-  "warning":    $warning,
-  "danger":     $danger,
-  "light":      $text-color,
-  "dark":       $body-bg,
-);
+// $theme-colors: (
+//   "primary":    $primary,
+//   "secondary":  $secondary,
+//   "success":    $success,
+//   "info":       $info,
+//   "warning":    $warning,
+//   "danger":     $danger,
+//   "light":      $light,
+//   "dark":       $dark,
+// );
