feat(updates): continue dev

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,6 +40,14 @@ footer {
   box-shadow: none;
 }
 
+.tab-pane {
+  position: relative;
+}
+
+.btn-fab {
+  // border-radius: ;
+}
+
 .rounded-img {
   div {
     border: none;
