--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,8 @@ $danger: #ED254E;
 $secondary_font: 'Playfair Display', serif;
 $font-size-base: 1rem;
 $enable-negative-margins: true;
+$input-btn-focus-box-shadow: none;
+$input-btn-focus-width: 0;
 $font-family-base: 'IBM Plex Mono', monospace, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
