--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -65,8 +65,8 @@ mark {
 }
 
 .offcanvas-top {
-  height: 10vh;
-  border: none;
+  height: 6em !important;
+  border: none !important;
   transition-timing-function: ease-in-out;
   transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
   transition: visibility all .5s ease-in-out;
@@ -76,7 +76,7 @@ mark {
   }
 
   @include query('sm') {
-    height: 100vh;
+    height: 100vh !important;
 
     .btn-close {
       padding-top: $spacer * 4.5;
